objects/Rep_Product_Line_Target__c.object
<CustomObject>
    <label>Rep Product Line Target</label>
    <nameField>
        <displayFormat>RPLT-{0000}</displayFormat>
        <label>Rep Product Line Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rep Product Line Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Jan</fullName>
                </value>
                <value>
                    <fullName>02-Feb</fullName>
                </value>
                <value>
                    <fullName>03-Mar</fullName>
                </value>
                <value>
                    <fullName>04-Apr</fullName>
                </value>
                <value>
                    <fullName>05-May</fullName>
                </value>
                <value>
                    <fullName>06-Jun</fullName>
                </value>
                <value>
                    <fullName>07-Jul</fullName>
                </value>
                <value>
                    <fullName>08-Aug</fullName>
                </value>
                <value>
                    <fullName>09-Sep</fullName>
                </value>
                <value>
                    <fullName>10-Oct</fullName>
                </value>
                <value>
                    <fullName>11-Nov</fullName>
                </value>
                <value>
                    <fullName>12-Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_PLT__c</fullName>
        <formula>Sales_Person__r.FirstName &amp; 
&quot; &quot; &amp;
Sales_Person__r.LastName &amp;
&quot;-&quot; &amp;
Product_Line__c &amp;
&quot;-&quot; &amp;
TEXT(Year__c) &amp; 
&quot;-&quot; &amp;  
RIGHT(TEXT(Month__c),3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep-PLT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>int_Month__c</fullName>
        <formula>TRIM(LEFT(TEXT(Month__c), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>int_Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Won Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Line_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Won_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Won Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stretch_Target__c</fullName>
        <label>Stretch Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commit Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Lost Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Revenue_Stretch__c</fullName>
        <formula>Won_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Target_Achieved__c</fullName>
        <formula>IF (Won_Revenue__c = 0, 0, (  Won_Revenue__c / Base_Target__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of matching Product Families on Closed Won opportunities compared to Target</inlineHelpText>
        <label>Base Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commit_Amount_Stretch__c</fullName>
        <formula>Commit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Revenue__c</fullName>
        <formula>Commit_Amount__c   +  Won_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_as_of_Base_Target__c</fullName>
        <formula>IF (  Commit_Amount__c = 0, 0, ( Commit_Amount__c /  Base_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit as % of Base Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Amount_Stretch__c</fullName>
        <formula>Closed_Lost_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Achievement__c</fullName>
        <formula>IF( Won_Revenue_Stretch__c =0, 0, ( Won_Revenue_Stretch__c / Stretch_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretch Target Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Target_Variance_Amount__c</fullName>
        <formula>Won_Revenue__c  -  Base_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Target Variance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_as_of_Stretch_Target__c</fullName>
        <formula>IF (  Commit_Amount__c = 0, 0, ( Commit_Amount__c /   Stretch_Target__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit as % of Stretch Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Variance_Amount__c</fullName>
        <formula>Won_Revenue_Stretch__c- Stretch_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretch Target Variance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Revenue_Stretch__c</fullName>
        <formula>Commit_Amount_Stretch__c + Won_Revenue_Stretch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Quantity_vs_Target_Quantity__c</fullName>
        <formula>IF (  Won_Quantity__c  = 0, 0, ( Won_Quantity__c/  Target_Quantity__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won Quantity vs Target Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Base_Target_Achievement__c</fullName>
        <formula>IF (Total_Forecast_Revenue__c = 0, 0, ( Total_Forecast_Revenue__c /  Base_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of Closed Won revenue plus Weighted Pipeline</inlineHelpText>
        <label>Forecast Base Target Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Stretch_Target_Achievement__c</fullName>
        <formula>IF ( Total_Forecast_Revenue_Stretch__c  = 0, 0, (  Total_Forecast_Revenue_Stretch__c  /   Stretch_Target__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Stretch Target Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>